--- a/package.json
+++ b/package.json
@@ -1,14 +1,33 @@
 {
-  "name": "opcms-client",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "@babel/runtime": "^7.8.3",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
+    "bootstrap-scss": "^4.4.1",
+    "exif-rotate-js": "^1.1.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "jquery-ui": "^1.12.1",
+    "jquery-zoom": "^1.7.21",
+    "jquery.magnify": "^1.5.1",
+    "node-sass": "^4.13.1",
+    "react": "^16.6.3",
+    "react-bootstrap": "^1.0.0-beta.9",
+    "react-device-detect": "^1.11.14",
+    "react-dom": "^16.6.3",
+    "react-filepond": "^7.0.1",
+    "react-fontawesome": "^1.6.1",
+    "react-image-crop": "^8.1.0",
+    "react-image-magnify": "^2.7.4",
+    "react-images-upload": "^1.2.7",
+    "react-loader-spinner": "^2.3.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "react-toastify": "^4.4.3",
+    "react-trello": "^2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,16 +38,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
